Refactor HomeScreenNodeFactory
Now ensures that a wait dialog is displayed if navigating to a menu is a bit slow.